--- a/_config.yml
+++ b/_config.yml
@@ -100,4 +100,4 @@ theme: NexT
 deploy:
   type: git
   repo: https://github.com/RobYang203/RobYang203.github.io.git
-  branch: master
+  branch: gh-pages
